[gd_scene load_steps=18 format=3 uid="uid://boy2gscf0adw3"]

[ext_resource type="Script" path="res://code/common/entities/skeleton.gd" id="1_ak1p4"]
[ext_resource type="Animation" uid="uid://cjv377wknlsw8" path="res://assets/animation/humanoid_idle.tres" id="2_bdesw"]
[ext_resource type="Texture2D" uid="uid://bxswey0lby83h" path="res://scenes/equipment/default/pelvis.png" id="2_ryb5o"]
[ext_resource type="Texture2D" uid="uid://i006vri136nw" path="res://scenes/equipment/default/thigh.png" id="3_71bqv"]
[ext_resource type="Texture2D" uid="uid://b5jk2avu43osw" path="res://scenes/equipment/default/calf.png" id="4_0v7tr"]
[ext_resource type="Texture2D" uid="uid://crte6t571o6pu" path="res://scenes/equipment/default/foot.png" id="5_7b0bd"]
[ext_resource type="Texture2D" uid="uid://c6ek04nxxyxc1" path="res://scenes/equipment/default/chest.png" id="6_1y75n"]
[ext_resource type="Texture2D" uid="uid://dl0kcwb1n7f4b" path="res://scenes/equipment/default/head.png" id="7_pjjwb"]
[ext_resource type="Texture2D" uid="uid://do3eesj53x7lg" path="res://scenes/equipment/default/shoulder.png" id="8_1uqtk"]
[ext_resource type="Texture2D" uid="uid://diwwutxb13c3d" path="res://scenes/equipment/default/forearm.png" id="9_55mjs"]
[ext_resource type="Texture2D" uid="uid://7xbghb7ranac" path="res://scenes/equipment/default/hand_l.png" id="10_wl0hr"]
[ext_resource type="Texture2D" uid="uid://bjkeolyo2euhh" path="res://scenes/equipment/default/shoulder_back.png" id="11_xoxc1"]
[ext_resource type="Texture2D" uid="uid://du1ttlvatvkra" path="res://scenes/equipment/default/forearm_back.png" id="12_nmav5"]
[ext_resource type="Texture2D" uid="uid://b170uoo2xfpdc" path="res://scenes/equipment/default/hand_back.png" id="13_f5jqq"]

[sub_resource type="Animation" id="Animation_gf2ma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pelvis_pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.53589]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pelvis_pivot/thigh_l_pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.00197]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pelvis_pivot/thigh_l_pivot/calf_l_pivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0698132]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("pelvis_pivot/thigh_l_pivot/calf_l_pivot/foot_l_pivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.25664]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("pelvis_pivot/thigh_r_pivot:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.35103]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("pelvis_pivot/thigh_r_pivot/calf_r_pivot:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.21337]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("pelvis_pivot/thigh_r_pivot/calf_r_pivot/foot_r_pivot:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.11701]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("pelvis_pivot/chest_pivot:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("pelvis_pivot/chest_pivot/head_pivot:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("pelvis_pivot/chest_pivot/shoulder_l_pivot:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.6057]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("pelvis_pivot/chest_pivot/shoulder_l_pivot/forearm_l_pivot:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("pelvis_pivot/chest_pivot/shoulder_l_pivot/forearm_l_pivot/hand_l_pivot:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("pelvis_pivot/chest_pivot/shoulder_r_pivot:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.46608]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("pelvis_pivot/chest_pivot/shoulder_r_pivot/forearm_r_pivot:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("pelvis_pivot/chest_pivot/shoulder_r_pivot/forearm_r_pivot/hand_r_pivot:rotation")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("pelvis_pivot:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -700)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_76b08"]
_data = {
"RESET": SubResource("Animation_gf2ma")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1lao2"]
_data = {
"idle": ExtResource("2_bdesw")
}

[node name="skeleton_root" type="Node2D"]
scale = Vector2(0.235, 0.235)
script = ExtResource("1_ak1p4")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -325)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_76b08"),
"humanoid": SubResource("AnimationLibrary_1lao2")
}

[node name="pelvis_pivot" type="Node2D" parent="."]
position = Vector2(0, -700)
rotation = -1.53589

[node name="pelvis_graphic" type="Sprite2D" parent="pelvis_pivot"]
z_index = 9
rotation = 1.63387
texture = ExtResource("2_ryb5o")
offset = Vector2(-48, 64.5)

[node name="thigh_l_pivot" type="Node2D" parent="pelvis_pivot"]
position = Vector2(-8.89805, -128.817)
rotation = 3.00197

[node name="thigh_l_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_l_pivot"]
z_index = 8
rotation = -1.43731
texture = ExtResource("3_71bqv")
offset = Vector2(13, 155)

[node name="calf_l_pivot" type="Node2D" parent="pelvis_pivot/thigh_l_pivot"]
position = Vector2(353.142, 0)
rotation = 0.0698132

[node name="calf_l_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_l_pivot/calf_l_pivot"]
z_index = 7
rotation = -1.32749
texture = ExtResource("4_0v7tr")
offset = Vector2(10, 81)

[node name="foot_l_pivot" type="Node2D" parent="pelvis_pivot/thigh_l_pivot/calf_l_pivot"]
position = Vector2(290.558, 0)
rotation = -1.25664

[node name="foot_l_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_l_pivot/calf_l_pivot/foot_l_pivot"]
z_index = 6
rotation = -0.460442
texture = ExtResource("5_7b0bd")
offset = Vector2(44, 37)

[node name="thigh_r_pivot" type="Node2D" parent="pelvis_pivot"]
position = Vector2(27.6292, 101.944)
rotation = -3.35103

[node name="thigh_r_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_r_pivot"]
z_index = 5
rotation = -1.43731
texture = ExtResource("3_71bqv")
offset = Vector2(13, 155)

[node name="calf_r_pivot" type="Node2D" parent="pelvis_pivot/thigh_r_pivot"]
position = Vector2(353.142, 0)
rotation = -6.21337

[node name="calf_r_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_r_pivot/calf_r_pivot"]
z_index = 4
rotation = -1.32749
texture = ExtResource("4_0v7tr")
offset = Vector2(10, 81)

[node name="foot_r_pivot" type="Node2D" parent="pelvis_pivot/thigh_r_pivot/calf_r_pivot"]
position = Vector2(290.558, 0)
rotation = -1.11701

[node name="foot_r_graphic" type="Sprite2D" parent="pelvis_pivot/thigh_r_pivot/calf_r_pivot/foot_r_pivot"]
z_index = 3
rotation = -0.460442
texture = ExtResource("5_7b0bd")
offset = Vector2(44, 37)

[node name="chest_pivot" type="Node2D" parent="pelvis_pivot"]
position = Vector2(95.1893, 4.29153e-06)

[node name="chest_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot"]
z_index = 10
rotation = 1.71011
texture = ExtResource("6_1y75n")
offset = Vector2(-96, -305.5)

[node name="head_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot"]
position = Vector2(547.302, -3.05176e-05)

[node name="head_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/head_pivot"]
z_index = 11
rotation = 1.41734
texture = ExtResource("7_pjjwb")
offset = Vector2(-7, -153)

[node name="shoulder_l_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot"]
position = Vector2(380.992, -218.208)
rotation = -1.6057

[node name="shoulder_l_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_l_pivot"]
z_index = 14
rotation = -1.80406
texture = ExtResource("8_1uqtk")
offset = Vector2(-46, 128)

[node name="forearm_l_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot/shoulder_l_pivot"]
position = Vector2(289.85, 0)

[node name="forearm_l_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_l_pivot/forearm_l_pivot"]
z_index = 13
rotation = -1.49402
texture = ExtResource("9_55mjs")
offset = Vector2(22, 56)

[node name="hand_l_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot/shoulder_l_pivot/forearm_l_pivot"]
position = Vector2(169.499, 0)

[node name="hand_l_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_l_pivot/forearm_l_pivot/hand_l_pivot"]
z_index = 12
rotation = -1.26544
texture = ExtResource("10_wl0hr")
offset = Vector2(21, 55)

[node name="shoulder_r_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot"]
position = Vector2(409.423, 111.938)
rotation = 1.46608

[node name="shoulder_r_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_r_pivot"]
rotation = -1.36057
texture = ExtResource("11_xoxc1")
offset = Vector2(24, 157)

[node name="forearm_r_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot/shoulder_r_pivot"]
position = Vector2(321.069, 0)

[node name="forearm_r_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_r_pivot/forearm_r_pivot"]
z_index = 1
rotation = -1.15473
texture = ExtResource("12_nmav5")
offset = Vector2(11, 43)

[node name="hand_r_pivot" type="Node2D" parent="pelvis_pivot/chest_pivot/shoulder_r_pivot/forearm_r_pivot"]
position = Vector2(141.032, 0)

[node name="hand_r_graphic" type="Sprite2D" parent="pelvis_pivot/chest_pivot/shoulder_r_pivot/forearm_r_pivot/hand_r_pivot"]
z_index = 2
rotation = -0.996997
texture = ExtResource("13_f5jqq")
offset = Vector2(38, 47)
